// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-divider full-width false 1`] = `
<mg-divider>
  <template shadowrootmode="open">
    <div class="mg-c-divider"></div>
  </template>
</mg-divider>
`;

exports[`mg-divider full-width true 1`] = `
<mg-divider>
  <template shadowrootmode="open">
    <div class="mg-c-divider mg-c-divider--full-width"></div>
  </template>
</mg-divider>
`;
